Added image of Bob and changed main photo

--- a/churchstow/package.json
+++ b/churchstow/package.json
@@ -1,5 +1,6 @@
 {
   "name": "churchstow",
+  "homepage": "https://churchstowgarageltd.co.uk",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
